# iEDA

./: .gitignore  CMakeLists.txt  flake.nix
.devcontainer/: Dockerfile  devcontainer.json
nix/: overlay.nix  scope.nix
nix/pkgs/glog/: package.nix
nix/pkgs/ieda/: package.nix
nix/pkgs/iedaClang/: default.nix
nix/pkgs/iir-rust/: package.nix
nix/pkgs/liberty-parser/: package.nix
nix/pkgs/rustpkgs/: default.nix
nix/pkgs/sdf-parse/: package.nix
nix/pkgs/spef-parser/: package.nix
nix/pkgs/vcd-parser/: package.nix
nix/pkgs/verilog-parser/: package.nix
nix/tests/: docker.nix  gperf2flamegraph.nix  run-perf.sh
nix/tests/offline/: bundler.nix  env.nix  perfEnv.nix
src/database/data/design/db_layout/: IdbLayer.h
src/database/manager/builder/verilog_builder/: verilog_read.h
src/database/manager/parser/liberty/: CMakeLists.txt  LibClassifyCell.cc
src/database/manager/parser/rust-common/: RustCommon.hh
src/database/manager/parser/sdf/sdf_parse/: Cargo.toml
src/database/manager/parser/spef/: CMakeLists.txt
src/database/manager/parser/spef/spef-parser/: Cargo.toml
src/database/manager/parser/vcd/: CMakeLists.txt
src/database/manager/parser/vcd/vcd_parser/: Cargo.toml
src/database/manager/parser/verilog/: CMakeLists.txt
src/operation/iIR/source/iir-rust/: CMakeLists.txt
src/operation/iIR/source/ir-solver/: CMakeLists.txt
src/operation/iPL/source/module/logger/: Log.cc
src/operation/iSTA/: CMakeLists.txt
src/utility/log/: CMakeLists.txt  Log.cc
src/utility/tcl/: CMakeLists.txt  ScriptEngine.hh
src/utility/time/: CMakeLists.txt
(+8 files in other folders)
